@@ -298,7 +298,7 @@ i387_print_float_info (struct gdbarch *gdbarch, struct ui_file *file,
 
 	  if (value_entirely_available (regval))
 	    {
-	      const char *raw = value_contents (regval);
+	      const gdb_byte *raw = value_contents (regval);
 
 	      fputs_filtered ("0x", file);
 	      for (i = 9; i >= 0; i--)
